Fix jumbotron mobile padding.

--- a/assets/stylesheets/_jumbotron.scss
+++ b/assets/stylesheets/_jumbotron.scss
@@ -4,6 +4,7 @@
 
 .jumbotron {
   text-align: center;
+  padding-top: 40px; // 64px
 
   @media (min-width: $screen-sm-min) {
     height: 659px;
